--- a/mlcode/templates/template.html
+++ b/mlcode/templates/template.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   {% block meta %}{% endblock meta %}
 
-  <title>{{issn}}</title>
+  <title>{{issn}} | {{this.journal}}</title>
   <link  href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
     {#
     <link  href="http://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.2/toastr.min.css" media="all" rel="stylesheet" />
@@ -26,15 +26,15 @@
     {% for p, e in papers %}
       <li><a href="#{{p.pmid}}">{{p.pmid}}</a> {% if e.has_all_sections() %}{% else %}
         <span class="label label-danger">{{e.missing()}}</span>{% endif %}
-        {{e.title()}}
+        {{e.s_title()}}
       </li>
     {% endfor %}
   </ol>
   {% for p, e in papers %}
     <div id="{{p.pmid}}" class="panel panel-default">
 
-      <h2>{{p.pmid}} ({{p.year}})</h2>
-      <h3>{{e.title()}}</h3>
+      <h2>PMID:{{p.pmid}} ({{p.year}})</h2>
+      <h3>{{e.s_title()}}</h3>
       <a href="http://doi.org/{{p.doi}}" target="pmid{{p.pmid}}">{{p.doi}}</a> <a href="#top"> top<i class="fa fa-angle-up"></i></a>
       {% set abstract = e.s_abstract() %}
       {% if abstract is not none %}
