added number reducer

--- a/mlcode/templates/template.html
+++ b/mlcode/templates/template.html
@@ -49,7 +49,7 @@
       {% if results is not none %}
           <h3>Results</h3>
           {% for txt in e.tostr(results) %}
-              <p>{{txt|prime}}<p>
+              <p>{{txt|prime}}</p>
           {% endfor %}
       {% else -%}
           <h2 class="missing">Results</h2>
@@ -58,7 +58,7 @@
       {% if methods is not none %}
           <h3>Methods</h3>
           {% for txt in e.tostr(methods) %}
-              <p>{{txt|prime}}<p>
+              <p>{{txt|prime}}</p>
           {% endfor %}
       {% else -%}
           <h2 class="missing">Methods</h2>
