--- a/mlcode/templates/template.html
+++ b/mlcode/templates/template.html
@@ -22,11 +22,18 @@
   <div class="container">
 
   <h1>Journal {{issn}} &mdash; {{this.journal}}</h1>
+  <a href="../index.html">back to index</a>
+  <br/>
+  <span class="label label-danger">m</span>: missing Methods section,
+  <span class="label label-danger">r</span>: missing Results section,
+  <span class="label label-danger">a</span>: missing Abstract section
+  <br/>
+
   <ol>
     {% for p, e in papers %}
       <li><a href="#{{p.pmid}}">{{p.pmid}}</a> {% if e.has_all_sections() %}{% else %}
         <span class="label label-danger">{{e.missing()}}</span>{% endif %}
-        {{e.s_title()}}
+        ({{p.year}}) {{e.s_title()}}
       </li>
     {% endfor %}
   </ol>
