--- a/mlcode/templates/index.html
+++ b/mlcode/templates/index.html
@@ -23,8 +23,8 @@
       <h2>Journals converted</h2>
       <table class="table">
           <tr><th>Link</th><th>ISSN</th><th>Failed/Total</th></tr>
-      {% for fname, issn, num, journal, nfailed in journals %}
-        <tr><td><a href="{{fname}}">{{journal}}</a></td>
+      {% for url, issn, num, journal, nfailed in journals %}
+        <tr><td><a href="{{url}}">{{journal}}</a></td>
             <td>{{issn}}</td>
             <td class="{% if nfailed> 0 %}failed{%else%}ok{% endif %}">{% if nfailed> 0 %}{{nfailed}}/{%endif%}{{num}}</td>
         </tr>
