--- a/mlcode/templates/template.html
+++ b/mlcode/templates/template.html
@@ -22,7 +22,7 @@
 <body id="top">
   <div class="container">
 
-  <h1>Journal {{issn}} &mdash; {{this.journal}}</h1>
+  <h1>Journal {{issn}} &mdash; {{this.journal}} ({{mod}})</h1>
   <a href="../index.html">back to index</a>
 
   <br/>
