--- a/mlcode/templates/index.html
+++ b/mlcode/templates/index.html
@@ -23,9 +23,9 @@
       <h2>Journals converted</h2>
       <table class="table">
           <tr><th>Link</th><th>ISSN</th><th>Failed/Total</th></tr>
-      {% for url, issn, num, journal, nfailed in journals %}
+      {% for url, mod, issn, num, journal, nfailed in journals %}
         <tr><td><a href="{{url}}">{{journal}}</a></td>
-            <td>{{issn}}</td>
+            <td>{{issn}} <small>({{mod}})</small></td>
             <td class="{% if nfailed> 0 %}failed{%else%}ok{% endif %}">{% if nfailed> 0 %}{{nfailed}}/{%endif%}{{num}}</td>
         </tr>
       {% endfor %}
