--- a/mlcode/templates/index.html
+++ b/mlcode/templates/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   {% block meta %}{% endblock meta %}
 
-  <title>Journals</title>
+  <title>Journals for {{name}}</title>
   <link  href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
     {#
     <link  href="http://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.2/toastr.min.css" media="all" rel="stylesheet" />
@@ -20,20 +20,25 @@
 </head>
 <body id="top">
   <div class="container">
-      <h2>Journals converted {{name}}</h2>
+      <h2>Journals converted for {{name}}</h2>
       <table class="table">
           <tr><th>Link</th><th>ISSN</th><th>Failed/Total</th></tr>
-      {% for url, mod, issn, num, journal, nfailed in journals %}
+      {% for url, mod, issn, num, journal, not_ok, nfailed in journals %}
         <tr><td><a href="{{url}}">{{journal}}</a></td>
             <td>{{issn}} <small>({{mod}})</small></td>
-            <td class="{% if nfailed > 0 %}failed{%else%}ok{% endif %}">{% if nfailed> 0 %}{{nfailed}}/{%endif%}{{num}}</td>
+            <td>{% if not_ok > 0 %}<span class="failed">{{not_ok}}</span>/{%endif%}{{num}}
+                {% if nfailed > 0 %} (<span class="failed">{{nfailed}}</span>){%endif%}
+            </td>
         </tr>
       {% endfor %}
-      {% set tfailed = journals|sum(attribute=5) %}
+      {% set tnot_ok = journals|sum(attribute=5) %}
+      {% set tfailed = journals|sum(attribute=6) %}
       {% set total = journals|sum(attribute=3) %}
       <tr><td>Total</td>
           <td></td>
-          <td>{% if tfailed > 0 %}{{tfailed}}/{%endif%}{{total}}</td>
+          <td>{% if tnot_ok > 0 %}<span class="failed">{{tnot_ok}}</span>/{%endif%}{{total}}
+              {% if tfailed > 0 %} (<span class="failed">{{tfailed}}</span>){%endif%}
+          </td>
       </tr>
       </table>
   </div>
